--- a/appsettings.json
+++ b/appsettings.json
@@ -3,6 +3,11 @@
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "FinalProject"
   },
+  "OpenIDConnectionClient": {
+    "Authority": "http://localhost:44371",
+    "ClientId": "reactproject1_testing",
+    "ClientSecret": "511536EF-F270-4058-80CA-1C89C192F69A"
+  },
   "AuthorizationThirdPartySetting": {
     "Google": {
       "ClientId": "233921336924-o2pcoj0lnbpapcnfn5u1m177fnp0037b.apps.googleusercontent.com",
