- delete google client secret for security.

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,8 +5,7 @@
   },
   "OpenIDConnectionClient": {
     "Authority": "http://localhost:44371",
-    "ClientId": "reactproject1_testing",
-    "ClientSecret": "511536EF-F270-4058-80CA-1C89C192F69A"
+    "ClientId": "reactproject1_testing"
   },
   "AuthorizationThirdPartySetting": {
     "Google": {
