--- a/appsettings.json
+++ b/appsettings.json
@@ -13,8 +13,7 @@
       "ProjectId": "crucial-cabinet-342015",
       "AuthUri": "https://accounts.google.com/o/oauth2/auth",
       "TokenUri": "https://oauth2.googleapis.com/token",
-      "auth_provider_x509_cert_url": "https://www.googleapis.com/oauth2/v1/certs",
-      "ClientSecret": "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",
+      "auth_provider_x509_cert_url": "https://www.googleapis.com/oauth2/v1/certs"
       "RedirectUri": "http://localhost:44371/login/google/",
       "javascript_origins": [ "http://localhost", "http://localhost:3080" ],
       "Scopes": "https://www.googleapis.com/auth/userinfo.profile"
