--- a/WebApplication1.csproj
+++ b/WebApplication1.csproj
@@ -31,4 +31,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.27.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\IdentityServer4\" />
+  </ItemGroup>
+
 </Project>
